--- a/views/editProfile.handlebars
+++ b/views/editProfile.handlebars
@@ -1,6 +1,7 @@
 {{> header}}
 <main>
     <div class="container-fluid">
+        <h2 class="mb-4">Edit Profile</h2>
         <p {{#unless error}}style="display: none;"{{/unless}}>{{error}}</p>
         <div class="container-fluid rounded px-4 py-4 mb-3 bg-info-subtle bg-opacity-25">
             <h5 class="mb-3">Change First Name</h5>
@@ -20,7 +21,7 @@
                 <input type="hidden" name="what_to_update" value="firstName">
                 <input type="hidden" name="id" value="{{user._id}}">
                 <input type="hidden" name="_method" value="PATCH">
-                <button type="submit" class="btn btn-primary">Update First Name</button>
+                <button type="submit" class="btn btn-primary">Save Changes</button>
             </form>
             <p {{#unless firstName_error}}style="display: none;"{{/unless}}>{{firstName_error}}</p>
         </div>
@@ -42,7 +43,7 @@
                 <input type="hidden" name="what_to_update" value="lastName">
                 <input type="hidden" name="id" value="{{user._id}}">
                 <input type="hidden" name="_method" value="PATCH">
-                <button type="submit" class="btn btn-primary">Update Last Name</button>
+                <button type="submit" class="btn btn-primary">Save Changes</button>
             </form>
             <p {{#unless lastName_error}}style="display: none;"{{/unless}}>{{lastName_error}}</p>
         </div>
@@ -64,7 +65,7 @@
                 <input type="hidden" name="what_to_update" value="userId">
                 <input type="hidden" name="id" value="{{user._id}}">
                 <input type="hidden" name="_method" value="PATCH">
-                <button type="submit" class="btn btn-primary">Update User ID</button>
+                <button type="submit" class="btn btn-primary">Save Changes</button>
             </form>
             <p {{#unless userId_error}}style="display: none;"{{/unless}}>{{userId_error}}</p>
         </div>
@@ -107,13 +108,13 @@
                 <input type="hidden" name="what_to_update" value="password">
                 <input type="hidden" name="id" value="{{user._id}}">
                 <input type="hidden" name="_method" value="PATCH">
-                <button type="submit" class="btn btn-primary">Update Password</button>
+                <button type="submit" class="btn btn-primary">Save Changes</button>
             </form>
             <p {{#unless password_error}}style="display: none;"{{/unless}}>{{password_error}}</p>
         </div>
-        <div class="container-fluid rounded px-4 py-4 mb-3 bg-danger-subtle">
+        <div class="container-fluid rounded px-4 py-4 mb-3">
             <div class="col">
-                <a href="/signout" class="btn btn-primary">Sign Out</a>
+                <a href="/profile" class="btn btn-secondary">Cancel</a>
             </div>
         </div>
     </div>
