Added the total balance owed and total balance owed to them to the user profil page

--- a/views/profileView.handlebars
+++ b/views/profileView.handlebars
@@ -25,6 +25,10 @@
                     <div class="mb-3">
                         <strong>User ID:</strong> {{user.userId}}
                     </div>
+                    <div class="mb-3">
+                        <p><strong>Total You Owe:</strong> ${{totalOwes}}</p>
+                        <p><strong>Total Owed To You:</strong> ${{totalOwedTo}}</p>
+                    </div>
                 </div>
 
                 <!-- Right Column: Groups -->
