--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -19,6 +19,9 @@
                 <li class="nav-item px-2">
                     <a href="/settings" class="nav-link">Settings</a>
                 </li>
+                <li class="nav-item px-2">
+                    <a href="/manual" class="nav-link">Instruction Manual</a>
+                </li>
             </ul>
         </div>
         {{/unless}}
