--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -17,7 +17,13 @@
                     <a href="/search" class="nav-link">Search</a>
                 </li>
                 <li class="nav-item px-2">
+                    <a href="/logs" class="nav-link">Logs</a>
+                </li>
+                <li class="nav-item px-2">
                     <a href="/settings" class="nav-link">Settings</a>
+                </li>
+                <li class="nav-item px-2">
+                    <a href="/manual" class="nav-link">Instruction Manual</a>
                 </li>
             </ul>
         </div>
